scss/main.scss
/* CSS for klimwoordenboek */

@use 'sass:list';
@use 'sass:math';
@use 'fonts-newsreader' as font;
@use 'background';
@use 'normalize';


/* font related */

$text-indent: 0.5rem;
$font-size: 14px;
$font-size-header: 1.333rem;
$vertical-adjust-for-font: 1.5px;


/* colors */

$background-color: oklch(0.97 0 0);
$background-color-darker: oklch(0 0 0 / 0.035);
$text-color: oklch(0.26 0 0);
$bold-color: oklch(0.32 0 0);
$underline-color: oklch(0.68 0 0);
$french-color: oklch(0.33 0.1 146.11);
$english-color: oklch(0.27 0.11 18.9);
$color-even: oklch(0.89 0.05 225.57);
$color-odd: oklch(0.86 0.05 225.57);


/* use golden ratio */

$ratio: 1.618;
$ratio-view-lower-width: 1200px;
$ratio-view-lower-height: math.round(math.div($ratio-view-lower-width, $ratio));
$ratio-view-upper-width: 1600px;
$ratio-view-upper-height: math.round(math.div($ratio-view-upper-width, $ratio));
$ratio-view-aspect-ratio: math.round(1000 * $ratio) + '/1000';


/* table width unit for grading tables */

$width-unit: 4.5px;


/* ------------------------------------------------------------ */

:root {
    font: 400 list.slash($font-size, 1.5) font.$font-family;
    text-rendering: optimizeLegibility;
    font-kerning: normal;
    font-variant: common-ligatures proportional-nums oldstyle-nums;
    hyphens: auto;
    line-break: loose;
    hyphenate-limit-chars: 6 2 3;
    color: $text-color;
    background: $background-color background.$image repeat scroll 0 0;
    overscroll-behavior: contain;
}

body {
    display: grid;
    grid-template-columns: 26.7% auto;
}

header {
    container-type: inline-size;
    position: sticky;
    top: 0;
    margin-inline: 5.5% 6.9%;
    padding-bottom: 2rlh;
    max-height: 100lvh;
    overflow-y: scroll;
    scrollbar-width: none;

    &::-webkit-scrollbar {
        display: none;
    }
}

main {
    margin: 0 3.1% 2rlh 1.6%
}


/*  to get a right margin on smaller screens */

section {
    padding-right: 3.1%;
}


/* continuous column */

#spacer {
    display: none;
}

@media screen and (width > 800px) and (device-width >= 750px) {
    .continuous-column {
        --column-offset: 2rlh;
        column-count: 2;
        column-gap: 4.1%;
        padding-top: var(--column-offset);

        #spacer + h3 {
            margin-top: calc(-1 * var(--column-offset));
        }

        /*  a block with zero height is ignored by getBoundingClientRect
            https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect */
        #spacer {
            /* adjust margin 1px because of min height */
            margin-top: calc(100svh - 4rlh - 1px);
            height: 1px;
            width: 100%;
            float: left;
            display: block;
            shape-outside: content-box;
            break-inside: avoid;
        }

        /* fix for firefox splitting h3 in columns */
        h3:after {
            content: " \00A0";
        }

        h3:target:after {
            text-decoration: underline $background-color 2px;
        }
    }
}


/*  on big and wide screens we use the golden ratio
    it kicks in between 1200 and 1600 pixels wide */

@media (height < $ratio-view-lower-height) and (width >= $ratio-view-lower-width) {

    /* wide enough, but not high enough, body will be 1200px wide */
    body {
        margin-inline: max(0px, 50vw - #{$ratio-view-lower-width * 0.5})
    }
}

@media (height >= $ratio-view-lower-height) and (width >= $ratio-view-lower-width) and (aspect-ratio >= $ratio-view-aspect-ratio) {

    /* body will use golden ratio */
    body {
        margin-inline: max(0px, 50vw - #{$ratio * 50}vh)
    }
}

@media (height > $ratio-view-upper-height) and (width > $ratio-view-upper-width) {

    /* too big, body will be 1600px wide */
    body {
        margin-inline: max(0px, 50vw - #{$ratio-view-upper-width * 0.5})
    }
}

h1,
h2,
h3 {
    margin-block: 0;
    font-size: inherit;
    line-height: inherit;
}

h2,
h3,
:is(nav, h3) + p {
    padding-top: 1rlh;
}

p {
    text-align: justify;
    text-indent: -$text-indent;
    margin-block: 0;
    padding-left: $text-indent;
}

dfn {
    scroll-margin-block: 2rlh;
}

h1,
main h3 {
    font-size: $font-size-header;
    line-height: 1rlh;
    padding-top: 2rlh;
}

*:target,
a:is(:link, :hover, :active, :focus, :visited) {
    color: inherit;
    -webkit-tap-highlight-color: transparent;
    transition: all 0.1s ease-in-out 0s;
}

a:is(:link, :visited) {
    text-decoration: underline $underline-color from-font;
}

:target,
a:is(.active, .active-link, :hover, :active, :focus) {
    text-decoration: underline currentcolor 2px;
}

a:focus {
    outline: none;
}

#alphabet {
    letter-spacing: 0.1em
}


/* language specifics */

strong,
b,
h1,
h2,
h3,
:lang(fr),
:lang(en) {
    font-weight: 450;
}

h1,
h2,
h3,
h3:target {
    color: $bold-color;
}

dfn {
    font-style: italic;
}

:lang(fr) {
    font-style: inherit;
    color: $french-color;
}

:lang(en) {
    font-style: italic;
    color: $english-color;
}

.nowrap {
    text-wrap-mode: nowrap;
}


/* make left column pushable to the left on a small screen */

@media (width < 550px) {
    body {
        min-width: max(400px, 135vw);
    }

    main {
        margin-right: 3vw;

        h3 {
            scroll-margin-right: 3vw;
        }
    }

    #grading-tables section {
        padding-right: 3vw;
    }
}


/* adjust header text alignment on smaller screens */

@container (width < 185px) {
    header p {
        text-align: left;
    }
}


/* grading tables */

.grading-table {
    margin-top: 1rlh;
    position: relative;
    width: max-content;

    &:hover::before {
        content: "";
        position: absolute;
        inset: -$vertical-adjust-for-font 0 $vertical-adjust-for-font;
        z-index: -1;
        background: linear-gradient(to right, $background-color-darker, $background-color-darker 50%, transparent 50%, transparent) left top / 64px 100%;
    }

    table {
        border-collapse: collapse;

        td {
            padding: 0;
            font-size: 0.85rem;
            text-align: center;
            line-height: 1rlh;
            position: relative;

            &::before {
                content: "";
                position: absolute;
                inset: -$vertical-adjust-for-font 0 $vertical-adjust-for-font;
                z-index: -1;
            }

            &:nth-child(odd)::before {
                background-color: $color-odd;
            }

            &:nth-child(even)::before {
                background-color: $color-even;
            }

            @each $n in 5, 6, 7, 8, 10, 11, 12, 14, 16, 20, 24, 48 {
                &.w-#{$n} {
                    min-width: $width-unit * $n;
                    max-width: $width-unit * $n;
                }
            }
        }
    }
}


/* adjust text in grading tables */

h3:has(+ section),
section p {
    position: sticky;
    width: max-content;
    left: 1.2%;
}


/* print */

@media print {
    page {
        margin: 10%;
    }

    p {
        break-inside: avoid-page;
    }

    h1,
    h2,
    h3 {
        break-after: avoid-page;
    }
}

